--- a/src/pages/news-feed/news-feed.html
+++ b/src/pages/news-feed/news-feed.html
@@ -20,10 +20,7 @@
         <div>
             <iframe src="http://o-phase.de/app/newsfeed/O-Phase%20Newsfeed"
             height="1000"
-            scrolling="auto"
-            width="100%"
-            frameBorder="0">
-
+            scrolling="auto">
         </iframe>
         </div>
   
