--- a/src/pages/meine-gruppe/meine-gruppe.html
+++ b/src/pages/meine-gruppe/meine-gruppe.html
@@ -21,7 +21,7 @@
 <ion-content padding>
   <div id="g1"> <!-- id="g+Gruppennummer" -->
     <div class="card">
-      <div class="item item-divider">
+      <div>
           <!-- Gruppennummer: -->
           Deine Tutoren der Gruppe 1
       </div>
