added subheader and timedifference provider

--- a/src/pages/news-feed/news-feed.html
+++ b/src/pages/news-feed/news-feed.html
@@ -9,7 +9,7 @@
           </ion-buttons>
       </ion-navbar>
     <ion-toolbar class="subtitle">
-            <ion-title>Noch {{seconds}} bis {{event}}</ion-title>
+            <ion-title>Noch {{timedifference.anzeigemonat}} Monate {{timedifference.anzeigetag}} Tage {{timedifference.anzeigestunde}} Stunden {{timedifference.anzeigeminute}} Minuten {{timedifference.anzeigesekunde}} Sekunden bis zur O-Phase!</ion-title>
     </ion-toolbar>
   
   </ion-header>
