--- a/src/pages/meine-gruppe/meine-gruppe.html
+++ b/src/pages/meine-gruppe/meine-gruppe.html
@@ -14,6 +14,9 @@
               </button>
           </ion-buttons>
       </ion-navbar>  
+      <ion-toolbar class="subtitle">
+        <ion-title class="padding-0">Noch {{timedifference.anzeigemonat}} Monate {{timedifference.anzeigetag}} Tage {{timedifference.anzeigestunde}} Stunden {{timedifference.anzeigeminute}} Minuten {{timedifference.anzeigesekunde}} Sekunden bis zur O-Phase!</ion-title>
+        </ion-toolbar>
 
 </ion-header>
 
