--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
-<ion-tabs tabsPlacement="bottom">
+<ion-tabs tabsPlacement="bottom" tabsHighlight="true">
   <ion-tab [root]="tab1" tabTitle="News Feed" tabIcon="md-list"></ion-tab>
   <ion-tab [root]="tab2" tabTitle="Meine Gruppe" tabIcon="ios-people-outline"></ion-tab>
   <ion-tab [root]="tab3" tabTitle="Zeitplan" tabIcon="ios-calendar-outline"></ion-tab>
