--- a/src/pages/zeitplan/zeitplan.html
+++ b/src/pages/zeitplan/zeitplan.html
@@ -13,9 +13,24 @@
         </ion-toolbar>
 
 </ion-header>
-
-
 <ion-content padding>
+
+
+<ion-card>
+    <img src="App2018/src/assets/imgs/events/begruessung.jpg"/>
+    <ion-card-content>
+      <ion-card-title>
+        Begrüßung
+        </ion-card-title>
+      <p>
+        The most popular industrial group ever, and largely
+        responsible for bringing the alcohol to a mass audience.
+      </p>
+    </ion-card-content>
+  </ion-card>
+
+
+
     <ion-card>
         <ion-card-header>
             Begrüßung
