--- a/src/pages/karte/karte.html
+++ b/src/pages/karte/karte.html
@@ -22,4 +22,18 @@
   <div class="mapDiv">
     <iframe src="https://www.google.com/maps/d/embed?mid=1Pa4d25qGBZO0o8OkSu8saFnqU6Q" width="100%" height="600"></iframe>
   </div>
+
+  <button ion-button full>Station 1</button>
+  <button ion-button full>Station 2 </button>
+  <button ion-button full>Station 3</button>
+  <button ion-button full>Station 4</button>
+  <button ion-button full>Station 5</button>
+  <button ion-button full>Station 6</button>
+  <button ion-button full>Station 7</button>
+  <button ion-button full>Station 8</button>
+  <button ion-button full>Station 9</button>
+
+
+
+
 </ion-content>
