--- a/src/pages/karte/karte.html
+++ b/src/pages/karte/karte.html
@@ -23,15 +23,47 @@
     <iframe src="https://www.google.com/maps/d/embed?mid=1Pa4d25qGBZO0o8OkSu8saFnqU6Q" width="100%" height="600"></iframe>
   </div>
 
-  <button ion-button full>Station 1</button>
-  <button ion-button full>Station 2 </button>
-  <button ion-button full>Station 3</button>
-  <button ion-button full>Station 4</button>
-  <button ion-button full>Station 5</button>
-  <button ion-button full>Station 6</button>
-  <button ion-button full>Station 7</button>
-  <button ion-button full>Station 8</button>
-  <button ion-button full>Station 9</button>
+
+
+  <ion-list>
+    <a ion-item href="https://goo.gl/maps/mUiDW5xZSjm">
+      <ion-icon name="md-globe"></ion-icon>
+        &nbsp;START
+    </a>
+    <a ion-item href="https://goo.gl/maps/TGtRRQ2yUH32">
+        <ion-icon name=""md-globe></ion-icon>
+        &nbsp;Kennenlernen 1
+    </a>
+    <a ion-item href="https://goo.gl/maps/r9AKcN3y8762">
+        <ion-icon name="md-globe"></ion-icon>
+        &nbsp;Kennenlernen 2
+    </a>
+    <a ion-item href="https://goo.gl/maps/VKY8dtTyCVv">
+        <ion-icon name="md-globe"></ion-icon>
+        &nbsp;Station 1
+    </a>
+    <a ion-item href="https://goo.gl/maps/hVXz6E5heFD2">
+        <ion-icon name="md-globe"></ion-icon>
+        &nbsp;Station 2
+    </a>
+    <a ion-item href="https://goo.gl/maps/n2uojtDjSKm">
+        <ion-icon name="md-globe"></ion-icon>
+        &nbsp;Station 3
+    </a>
+    <a ion-item href="https://goo.gl/maps/ZtMXWRQpRD22">
+        <ion-icon name="md-globe"></ion-icon>
+        &nbsp;Station 4
+    </a>
+    <a ion-item href="https://goo.gl/maps/3GTGER9L1vx">
+      <ion-icon name="md-globe"></ion-icon>
+      &nbsp;Station 5
+    </a>
+    <a ion-item href="https://goo.gl/maps/Fq3XDkRAp8t">
+        <ion-icon name="md-globe"></ion-icon>
+        &nbsp;Station 6
+    </a>
+</ion-list>
+
 
 
 
