--- a/src/pages/karte/karte.html
+++ b/src/pages/karte/karte.html
@@ -31,7 +31,7 @@
         &nbsp;START
     </a>
     <a ion-item href="https://goo.gl/maps/TGtRRQ2yUH32">
-        <ion-icon name=""md-globe></ion-icon>
+        <ion-icon name="md-globe"></ion-icon>
         &nbsp;Kennenlernen 1
     </a>
     <a ion-item href="https://goo.gl/maps/r9AKcN3y8762">
