--- a/src/pages/infos/infos.html
+++ b/src/pages/infos/infos.html
@@ -41,6 +41,7 @@
 
         <ion-list>
             <a ion-item href="http://www.sw-ka.de/de/essen/">
+                <color = "blue">
                 <ion-icon name="pizza"></ion-icon>
                 &nbsp;Mensa-Plan
             </a>
