--- a/src/pages/news-feed/news-feed.html
+++ b/src/pages/news-feed/news-feed.html
@@ -16,10 +16,15 @@
   
   
   <ion-content padding>
-        <!--<h4>Bier-Konsum in Litern</h4>
+
+        <h4>Bier-Konsum in Litern</h4>
         <div>
             <iframe width="100%" height="200" src="https://live.amcharts.com/1MTM3/embed/" frameborder="0"></iframe>
-        </div>-->
+        </div>
+        
+
+
+
         <div>
             <iframe src="http://o-phase.de/app/newsfeed/O-Phase%20Newsfeed"
             height="1000"
