--- a/src/pages/meine-gruppe/meine-gruppe.html
+++ b/src/pages/meine-gruppe/meine-gruppe.html
@@ -42,7 +42,7 @@
               </div>
               <div class="item">
                   <h3>Daniel Orthey</h3>
-                  <a href="tel:+49-176-24084190">+49 176 24084190</a><br>
+                  <a href="tel:+49-17621508110">+49 176 24084190</a><br>
   
               </div>
               <div class="item">
@@ -52,7 +52,7 @@
               </div>
               <div class="item">
                   <h3>Julia Brenner</h3>
-                  <a href="tel:+49-160-5552037">+49 160 5552037</a><br>
+                  <a href="tel:+49-1771981715">+49 160 5552037</a><br>
   
               </div>
               <div class="item">
@@ -62,7 +62,7 @@
               </div>
               <div class="item">
                   <h3>Christopher Bülte</h3>
-                  <a href="tel:+49-176-26216571">+49 176 26216571</a><br>
+                  <a href="tel:+49-15902217616">+49 176 26216571</a><br>
   
               </div>
               <!-- Frühstücks-Treffpunkte der jeweiligen Gruppe -->
@@ -113,7 +113,7 @@
                         <!-- Karaoke-Songtext der jeweiligen Gruppe -->
               </div>
             </div>
-    </div>
+
     <div id="g3"> <!-- Gruppe Variable -->
         <div class="card">
                 <div>
@@ -162,7 +162,7 @@
                         <!-- Karaoke-Songtext der jeweiligen Gruppe -->
               </div>
             </div>
-    </div>
+ 
     <div id="g4"> <!-- Gruppe Variable -->
         <div class="card">
                 <div>
@@ -211,7 +211,7 @@
                         <!-- Karaoke-Songtext der jeweiligen Gruppe -->
               </div>
             </div>
-    </div>
+
     <div id="g5"> <!-- Gruppe Variable -->
         <div class="card">
                 <div>
@@ -260,7 +260,7 @@
                         <!-- Karaoke-Songtext der jeweiligen Gruppe -->
               </div>
             </div>
-    </div>
+
 
     <div id="g5"> <!-- Gruppe Variable -->
         <div class="card">
@@ -310,7 +310,7 @@
                         <!-- Karaoke-Songtext der jeweiligen Gruppe -->
               </div>
             </div>
-    </div>
+
     <div id="g5"> <!-- Gruppe Variable -->
         <div class="card">
                 <div>
@@ -355,7 +355,7 @@
                         <!-- Karaoke-Songtext der jeweiligen Gruppe -->
               </div>
             </div>
-    </div>
+
     <div id="g5"> <!-- Gruppe Variable -->
         <div class="card">
                 <div>
@@ -399,7 +399,7 @@
                         <!-- Karaoke-Songtext der jeweiligen Gruppe -->
               </div>
             </div>
-    </div>
+   
     <div id="g5"> <!-- Gruppe Variable -->
         <div class="card">
                 <div>
@@ -448,7 +448,7 @@
                         <!-- Karaoke-Songtext der jeweiligen Gruppe -->
               </div>
             </div>
-    </div>
+  
     <div id="g5"> <!-- Gruppe Variable -->
         <div class="card">
                 <div>
@@ -497,7 +497,7 @@
                         <!-- Karaoke-Songtext der jeweiligen Gruppe -->
               </div>
             </div>
-    </div>
+   
     <div id="g5"> <!-- Gruppe Variable -->
         <div class="card">
                 <div>
@@ -546,7 +546,7 @@
                         <!-- Karaoke-Songtext der jeweiligen Gruppe -->
               </div>
             </div>
-    </div>
+ 
     <div id="g5"> <!-- Gruppe Variable -->
         <div class="card">
                 <div>
@@ -595,7 +595,7 @@
                         <!-- Karaoke-Songtext der jeweiligen Gruppe -->
               </div>
             </div>
-    </div>
+
 
     <div id="g5"> <!-- Gruppe Variable -->
         <div class="card">
@@ -645,7 +645,7 @@
                         <!-- Karaoke-Songtext der jeweiligen Gruppe -->
               </div>
             </div>
-    </div>
+
 
     <div id="g5"> <!-- Gruppe Variable -->
         <div class="card">
@@ -695,7 +695,7 @@
                         <!-- Karaoke-Songtext der jeweiligen Gruppe -->
               </div>
             </div>
-    </div>
+   
     <div id="g5"> <!-- Gruppe Variable -->
         <div class="card">
                 <div>
@@ -744,7 +744,7 @@
                         <!-- Karaoke-Songtext der jeweiligen Gruppe -->
               </div>
             </div>
-    </div>
+
     <div id="g5"> <!-- Gruppe Variable -->
         <div class="card">
                 <div>
@@ -789,7 +789,7 @@
                         <!-- Karaoke-Songtext der jeweiligen Gruppe -->
               </div>
             </div>
-    </div>
+   
     <div id="g5"> <!-- Gruppe Variable -->
         <div class="card">
                 <div>
@@ -838,7 +838,7 @@
                         <!-- Karaoke-Songtext der jeweiligen Gruppe -->
               </div>
             </div>
-    </div>
+
     <div id="g5"> <!-- Gruppe Variable -->
         <div class="card">
                 <div>
@@ -882,7 +882,7 @@
                         <!-- Karaoke-Songtext der jeweiligen Gruppe -->
               </div>
             </div>
-    </div>
+   
     <div id="g5"> <!-- Gruppe Variable -->
         <div class="card">
                 <div>
@@ -931,7 +931,7 @@
                         <!-- Karaoke-Songtext der jeweiligen Gruppe -->
               </div>
             </div>
-    </div>
+ 
     <div id="g5"> <!-- Gruppe Variable -->
         <div class="card">
                 <div>
@@ -975,7 +975,7 @@
                         <!-- Karaoke-Songtext der jeweiligen Gruppe -->
               </div>
             </div>
-    </div>
+
     <div id="g5"> <!-- Gruppe Variable -->
         <div class="card">
                 <div>
@@ -1024,7 +1024,7 @@
                         <!-- Karaoke-Songtext der jeweiligen Gruppe -->
               </div>
             </div>
-    </div>
+  
     <div id="g5"> <!-- Gruppe Variable -->
         <div class="card">
                 <div>
@@ -1073,7 +1073,7 @@
                         <!-- Karaoke-Songtext der jeweiligen Gruppe -->
               </div>
             </div>
-    </div>
+
     <div id="g5"> <!-- Gruppe Variable -->
         <div class="card">
                 <div>
@@ -1122,7 +1122,7 @@
                         <!-- Karaoke-Songtext der jeweiligen Gruppe -->
               </div>
             </div>
-    </div>
+ 
     <div id="g5"> <!-- Gruppe Variable -->
         <div class="card">
                 <div>
@@ -1171,7 +1171,7 @@
                         <!-- Karaoke-Songtext der jeweiligen Gruppe -->
               </div>
             </div>
-    </div>
+  
     <div id="g5"> <!-- Gruppe Variable -->
         <div class="card">
                 <div>
@@ -1225,5 +1225,5 @@
                         <!-- Karaoke-Songtext der jeweiligen Gruppe -->
               </div>
             </div>
-    </div>
+ 
 </ion-content>
