--- a/src/pages/karte/karte.html
+++ b/src/pages/karte/karte.html
@@ -15,7 +15,7 @@
 
 <ion-content padding>
   <div class="item item-text-wrap">
-    <h3>Hier findet Ihr eine dicke Karte mit allen wichtigen Spots für die O-Phasen-Abendevents und die DisKAvery. Außerdem haben wir einige megageheime Geheimtipps für Euch gesammelt, mit denen Ihr Euch im Karlsruher #baustellenjungle besser zurechtfindet!<br></h3>
+    <p>Hier findet Ihr eine dicke Karte mit allen wichtigen Spots für die O-Phasen-Abendevents und die DisKAvery. Außerdem haben wir einige megageheime Geheimtipps für Euch gesammelt, mit denen Ihr Euch im Karlsruher #baustellenjungle besser zurechtfindet!</p>
     <SMALL>Tipp: Auf das Symbol links oben klicken, um verschiedene Kategorien auszuwählen! Einfach mal ausprobieren!</SMALL>
   </div>
 
