--- a/src/pages/infos/infos.html
+++ b/src/pages/infos/infos.html
@@ -23,6 +23,8 @@
 
 <ion-content padding>
 
+        
+
         <p>An diese Adresse kannst du deine Erlebnisse und Bilder des Tages schicken, wenn du willst, dass sie am nächsten Morgen in der MorgenPost landen. FÜTTERT UNS MIT GEILEN NEWS!
         </p>
         <ion-list>
@@ -85,9 +87,14 @@
                 <ion-icon name="print"></ion-icon>
                 &nbsp;PrintPeter (Gratis drucken!)
             </a>
+            <a ion-item href="https://paypal.me/pools/c/88hOsnrXms">
+                <ion-icon name="beer"></ion-icon>
+                &nbsp;Kaufe den Nerds ein Bier!
+            </a>
         </ion-list>
 
 
         <button ion-button block (click)="logoutAlert()">Abmelden</button>
         
 </ion-content>
+https://paypal.me/pools/c/88hOsnrXms
