--- a/src/pages/news-feed/news-feed.html
+++ b/src/pages/news-feed/news-feed.html
@@ -17,10 +17,8 @@
   
   <ion-content padding>
 
-        <h4>Bier-Konsum in Litern</h4>
-        <div>
-            <iframe width="100%" height="200" src="https://live.amcharts.com/1MTM3/embed/" frameborder="0"></iframe>
-        </div>
+        <h6>-Willkommen zur geilsten O-Phase der Welt!-</h6>
+       
         
 
 
