minor style fixes

--- a/src/pages/zeitplan/zeitplan.html
+++ b/src/pages/zeitplan/zeitplan.html
@@ -15,10 +15,18 @@
 </ion-header>
 <ion-content padding>
 
+    <div><h6> -----------------Wochenplan und Events----------</h6> </div>
+       
+       
 
-        <div class="item item-text-wrap" style="padding: 0;">
-                <img src="assets/imgs/fixed/wochenplan.jpg" width="100%">
-            </div>
+
+
+
+            <ion-card>
+                    <img src="assets/imgs/fixed/wochenplan.jpg" height="300"/>
+                  </ion-card>
+
+
 
 <ion-card>
     <img src="assets/imgs/events/begruessung.jpg"/>
