--- a/src/pages/zeitplan/zeitplan.html
+++ b/src/pages/zeitplan/zeitplan.html
@@ -29,7 +29,7 @@
 
 
 <ion-card>
-    <img src="assets/imgs/events/begruessung.jpg"/>
+    <img src="assets/imgs/events/3.jpg"/>
     <ion-card-content>
       <ion-card-title>
         Begrüßung
@@ -42,7 +42,7 @@
   </ion-card>
 
   <ion-card>
-        <img src="assets/imgs/events/begruessung.jpg"/>
+        <img src="assets/imgs/events/1.jpg"/>
         <ion-card-content>
           <ion-card-title>
             Kneipenbesuch
