--- a/src/pages/infos/infos.html
+++ b/src/pages/infos/infos.html
@@ -24,6 +24,17 @@
 <ion-content padding>
 
         
+        <p>Aboniert unser Filmteam für die geisten O-Phasen-Storys
+            </p>
+            <ion-list>
+                <a ion-item href="https://instagram.com/filmteam2k18?utm_source=ig_profile_share&igshid=xplh4rlsg4jz">
+                    <ion-icon name="camera"></ion-icon>
+                    &nbsp;FILMTEAM STORYS (abonieren)
+                </a>
+            </ion-list>
+    
+
+
 
         <p>An diese Adresse kannst du deine Erlebnisse und Bilder des Tages schicken, wenn du willst, dass sie am nächsten Morgen in der MorgenPost landen. FÜTTERT UNS MIT GEILEN NEWS!
         </p>
