--- a/src/pages/news-feed/news-feed.html
+++ b/src/pages/news-feed/news-feed.html
@@ -1,7 +1,7 @@
 <ion-header>
 
     <ion-navbar class="title">
-        <ion-title><ion-icon name="heart"></ion-icon>&nbsp;&nbsp;KroKo-Phase</ion-title>
+        <ion-title><ion-icon name="beer"></ion-icon>&nbsp;&nbsp;KroKo-Phase</ion-title>
           <ion-buttons end>
               <button ion-button icon-only (click)="openMap()">
                   <ion-icon name="compass"></ion-icon>
